K8s/data-generator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: data-generator
  namespace: tfg-iot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: data-generator
  template:
    metadata:
      labels:
        app: data-generator
    spec:
      containers:
      - name: data-generator
        image: registry.local:5000/data-generator:1.1
