K8s/flask-api-deployment.yaml
# Deployment flask-api
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-api
  namespace: tfg-iot
spec:
  replicas: 2          # valor inicial; el HPA lo gestionará
  selector:
    matchLabels:
      app: flask-api
  template:
    metadata:
      labels:
        app: flask-api
    spec:
      containers:
        - name: flask-api
          image: registry.local:5000/flask-api:1.1
          ports:
            - containerPort: 5000
          resources:
            requests:
              cpu: "20m"      # antes 50m
              memory: "64Mi"
