K8s/cratedb-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: cratedb
  namespace: tfg-iot
spec:
  clusterIP: None
  selector:
    app: cratedb
  ports:
    - name: http
      port: 4200
    - name: pg
      port: 5432
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: cratedb
  namespace: tfg-iot
spec:
  serviceName: cratedb
  replicas: 1
  selector:
    matchLabels:
      app: cratedb
  template:
    metadata:
      labels:
        app: cratedb
    spec:
      containers:
        - name: cratedb
          image: crate:5.4.2
          ports:
            - containerPort: 4200
              name: http
            - containerPort: 5432
              name: pg
          volumeMounts:
            - name: data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: standard
        resources:
          requests:
            storage: 2Gi
