K8s/flask-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-api
  namespace: tfg-iot
spec:
  selector:
    app: flask-api          # coincide con la label del Deployment
  ports:
    - name: http
      port: 5000            # el puerto que expone el Ingress
      targetPort: 5000
