K8s/ingress-api.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-api
  namespace: tfg-iot
spec:
  ingressClassName: nginx
  rules:
    - host: tfg.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: flask-api
                port:
                  number: 5000
