K8s/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-grafana
  namespace: tfg-iot
spec:
  ingressClassName: nginx
  rules:
  - host: grafana.tfg.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana
            port:
              number: 3000




# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-ui
#   namespace: tfg-iot
#   annotations:
#     nginx.ingress.kubernetes.io/enable-rewrite-log: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: tfg.local
#     http:
#       paths:
#       - path: /
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: grafana
#             port:
#               number: 3000
#       - path: /crate(/|$)(.*)
#         pathType: ImplementationSpecific
#         backend:
#           service:
#             name: cratedb
#             port:
#               number: 4200
